Fix height and margins so detail->edit doesn't cause the fields to jump around so much.

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -1393,9 +1393,9 @@ img
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
 
-    margin: 0;
+    margin: 0px 0px 0px 12px;
     padding: 0px 10px 0px 0px;
-    height: 32px !important;
+    height: 23px !important;
     border: 0 none transparent;
     background: transparent;
 }
